NngSharp/Native/_nng.h



	typedef struct nng_socket_s {
		uint32_t id;
	} nng_socket;


	// nng_close closes the socket, terminating all activity and
	// closing any underlying connections and releasing any associated
	// resources.
	NNG_DECL int nng_close(nng_socket);


	// nng_send sends (or arranges to send) the data on the socket.  Note that
	// this function may (will!) return before any receiver has actually
	// received the data.  The return value will be zero to indicate that the
	// socket has accepted the entire data for send, or an errno to indicate
	// failure.  The flags may include NNG_FLAG_NONBLOCK or NNG_FLAG_ALLOC.
	// If the flag includes NNG_FLAG_ALLOC, then the function will call
	// nng_free() on the supplied pointer & size on success. (If the call
	// fails then the memory is not freed.)
	NNG_DECL int nng_send(nng_socket, void*, size_t, int);


	// nng_recv receives message data into the socket, up to the supplied size.
	// The actual size of the message data will be written to the value pointed
	// to by size.  The flags may include NNG_FLAG_NONBLOCK and NNG_FLAG_ALLOC.
	// If NNG_FLAG_ALLOC is supplied then the library will allocate memory for
	// the caller.  In that case the pointer to the allocated will be stored
	// instead of the data itself.  The caller is responsible for freeing the
	// associated memory with nng_free().
	NNG_DECL int nng_recv(nng_socket, void*, size_t*, int);